corrected spacing in main title for smaller devices

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -244,6 +244,10 @@ p {
   font-size: 2rem;
   line-height: 1.3;
 
+  @include media-breakpoint-down(md) {
+    letter-spacing: -2px;
+  }
+
   @include media-breakpoint-up(lg) {
     font-size: 3rem;
   }
